@@ -80,6 +80,10 @@ void addExample4(pybind11::module_& m) {
             rdoc::boundarySpin)
         .def_static("bundleWithMonodromy", &Example<4>::bundleWithMonodromy,
             rdoc::bundleWithMonodromy)
+        .def_static("spun", &Example<4>::spun,
+            pybind11::arg("knot"),
+            pybind11::arg("breakOpen") = regina::StrandRef(),
+            rdoc::spun)
     ;
     regina::python::no_eq_static(c);
 
