@@ -36,26 +36,68 @@ boundary.
 Let ``M`` be the given 3-manifold, with real boundary ``∂M``. This
 constructs a 4-manifold from ``M`` as follows:
 
-* First we build the product ``M × S1``.
+* First we build the product ``M × S1`` in a similar way to
+  s1Bundle(). That is: we build a tetrahedral prism for each original
+  tetrahedron of *M*, glue the top and bottom tetrahedra of each prism
+  together, and glue the walls of the prisms together according to the
+  gluings between the original tetrahedra of *M*.
 
 * Then, for each point ``b`` on the real boundary ``∂M``, we collapse
   the fibre ``b × S1`` to a single point. (Equivalently, we attach a
   copy of ``∂M × D2`` to the product ``M × S1`` so that, for each
   point ``b`` on the boundary ``∂M``, the fibre ``b × S1`` becomes the
-  boundary of the corresponding disc ``b × D2``.)
+  boundary of the corresponding disc ``b × D2``.) We implement this as
+  follows: for each boundary facet of *M*, we fold the corresponding
+  prism wall in half, so that the top half folds onto the bottom.
 
-The second step only acts on real boundary; that is, points ``b`` that
-lie on boundary triangles of ``M``. It ignores ideal boundary, in the
-sense that ideal vertices will just be transformed as part of the
-product ``M × S1`` (the first step), without the subsequent
-collapse/filling operation (the second step). This means that any
-ideal vertices of ``M`` will become invalid edges of the resulting
-4-maifold triangulation.
+* If one or more of boundary facets of *M* are locked, then the
+  corresponding prism walls will _not_ folded onto themselves; that
+  is, the fibres over those parts of the boundary will _not_ be
+  collapsed. See the section below on locks for further details.
 
-The product will contain 82 pentachora for each original tetrahedron
-of *M*, and will contain many internal vertices. It is highly
-recommended that you call Triangulation<4>::simplify() afterwards if
-you do not need to preserve the combinatorial structure.
+Regarding real versus ideal boundary:
+
+* The second step (collapsing fibres) only acts on _real_ boundary;
+  that is, points ``b`` that lie on boundary triangles of ``M``. It
+  ignores ideal boundary, in the sense that ideal vertices will just
+  be transformed as part of the product ``M × S1`` (the first step),
+  without the subsequent collapse/filling operation.
+
+* As a result, any ideal vertices of ``M`` will produce invalid edges
+  in the resulting 4-maifold triangulation (i.e., edges whose links
+  are the same surfaces as the links of the original ideal vertices of
+  ``M``).
+
+Like s1Bundle(), the resulting triangulation will be very large: it
+creates 82 pentachora for each original tetrahedron of *M*. It is
+highly recommended that you call Triangulation<4>::simplify()
+afterwards if you do not need to preserve the combinatorial structure.
+
+This routine handles locks as follows:
+
+* For any simplex in *base* that is locked, all of the pentachora and
+  internal facets of the corresponding prism will also be locked, as
+  well as the two tetrahedra at each end of the prism (which will be
+  glued together, as explained above).
+
+* For any internal triangular facet of *base* that is locked, all of
+  the tetrahedral facets on the corresponding prism wall(s) will be
+  locked.
+
+* For any boundary facet of *base* that is locked, the corresponding
+  prism wall will _not_ be folded onto itself (i.e, the corresponding
+  fibres will _not_ be collapsed). Instead, all of the tetrahedral
+  facets on that prism wall will be locked, and will remain as
+  boundary facets of the final 4-dimensional triangulation.
+
+* If *base* has a mix of locked and unlocked boundary facets, you
+  should aim to ensure that the locked and unlocked regions are
+  separated by embedded curves in the boundary of *M* (i.e., there are
+  no "pinch points" where the local picture has two or more locked
+  regions meeting two or more unlocked regions). Otherwise you may
+  find that these pinch points create invalid edges in the resulting
+  4-manifold triangulation (specifically, edges whose links are
+  2-spheres with two or more punctures).
 
 Note that the current construction does _not_ give an oriented
 triangulation (due to the specific choice of labelling); this may
@@ -65,7 +107,8 @@ Parameter ``base``:
     the 3-manifold triangulation *M*, as described above.
 
 Returns:
-    the 4-manifold obtained by spinning *M* around its boundary.)doc";
+    the 4-manifold obtained by spinning *M* around its boundary, as
+    described above.)doc";
 
 // Docstring regina::python::doc::Example_::bundleWithMonodromy
 static const char *bundleWithMonodromy =
@@ -79,10 +122,22 @@ combinatorial automorphism, which means that for a non-trivial
 monodromy you may need to do some work to find a sufficiently
 symmetric 3-manifold triangulation to begin with.
 
-The resulting manifold will contain 82 pentachora for each original
-tetrahedron of *M*, and will contain many internal vertices. It is
-highly recommended that you call Triangulation<4>::simplify()
-afterwards if you do not need to preserve the combinatorial structure.
+The product is created as follows. For each original tetrahedron of
+*M*, we build a tetrahedral prism containing 82 pentachora. We then
+glue these prisms together in a manner that follows the gluings of the
+original tetrahedra. Moreover, we take the two copies of *M* that are
+formed from the tetrahedra at the two ends of these prisms, and glue
+these together according to the given monodromy. It is highly
+recommended that you call Triangulation<4>::simplify() afterwards if
+you do not need to preserve the combinatorial structure.
+
+For any simplex in *base* that is locked, all of the pentachora and
+internal facets of the corresponding prism will also be locked. For
+any triangular facet of *base* that is locked, all of the tetrahedral
+facets on the corresponding prism wall(s) will likewise be locked. The
+two tetrahedra at the ends of each prism will _not_ be locked (these
+are the tetrahedra along which the two copies of *M* are identified
+using the given monodromy).
 
 Note that the current construction does _not_ give an oriented
 triangulation (due to the specific choice of labelling); this may
@@ -157,10 +212,17 @@ boundary is obtained by mapping vertices 0,1,2,3 of tetrahedron *i* of
 obtained by mapping vertices 0,1,2,3 of tetrahedron *i* of *M* to
 vertices 0,1,2,3 of pentachoron *n*+i.
 
-The product itself will contain 82 pentachora for each original
-tetrahedron of *M*, and will contain many internal vertices. It is
-highly recommended that you call Triangulation<4>::simplify()
-afterwards if you do not need to preserve the combinatorial structure.
+The product is created as follows: for each original tetrahedron of
+*M* we build a tetrahedral prism containing 82 pentachora, and we then
+glue these prisms together in a manner that follows the gluings of the
+original tetrahedra. It is highly recommended that you call
+Triangulation<4>::simplify() afterwards if you do not need to preserve
+the combinatorial structure.
+
+For any simplex in *base* that is locked, all of the pentachora and
+internal facets of the corresponding prism will also be locked. For
+any triangular facet of *base* that is locked, all of the tetrahedral
+facets on the corresponding prism wall(s) will likewise be locked.
 
 Note that the current construction does _not_ give an oriented
 triangulation (due to the specific choice of labelling); this may
@@ -198,10 +260,20 @@ R"doc(Returns a triangulation of the product ``M × S1``, where *M* is the
 given 3-manifold triangulation. This simply calls iBundle() and then
 glues together the two copies of *M* on the boundary.
 
-The product will contain 82 pentachora for each original tetrahedron
-of *M*, and will contain many internal vertices. It is highly
-recommended that you call Triangulation<4>::simplify() afterwards if
-you do not need to preserve the combinatorial structure.
+The product is created as follows. For each original tetrahedron of
+*M*, we build a tetrahedral prism containing 82 pentachora. We then
+glue these prisms together in a manner that follows the gluings of the
+original tetrahedra, and we also glue together the two tetrahedra at
+each end of every prism. It is highly recommended that you call
+Triangulation<4>::simplify() afterwards if you do not need to preserve
+the combinatorial structure.
+
+For any simplex in *base* that is locked, all of the pentachora and
+internal facets of the corresponding prism will also be locked, as
+well as the two tetrahedra at each end of the prism (which will be
+glued together, as explained above). For any triangular facet of
+*base* that is locked, all of the tetrahedral facets on the
+corresponding prism wall(s) will likewise be locked.
 
 Note that the current construction does _not_ give an oriented
 triangulation (due to the specific choice of labelling); this may
@@ -260,6 +332,52 @@ routine simplicialSphere().
 
 Returns:
     the standard simplicial 4-sphere.)doc";
+
+// Docstring regina::python::doc::Example_::spun
+static const char *spun =
+R"doc(Returns an ideal triangulation of the complement of the 2-knot
+obtained by spinning the given 1-knot (without twisting). The knot to
+be spun is passed as the first argument; the second (optional)
+argument allows you to specify where the knot should be broken open
+when carrying out the spinning construction.
+
+The spinning construction is described by Artin in "Zur Isotopie
+zweidimensionaler Flächen im R_4", Abh. Math. Sem. Univ. Hamburg 4
+(1925), no. 1, 174-177.
+
+.. warning::
+    The resulting triangulation will typically contain thousands, or
+    even tens of thousands, of pentachora, even when *knot* has very
+    few crossings. It will also typically contain many internal
+    vertices, as well as the one ideal vertex representing the 2-knot
+    itself. You will therefore certainly want to simplify the
+    resulting 4-manifold triangulation; moreover, this simplification
+    could well take some time. In the end you might well reach a very
+    small number of pentachora (e.g., for the trefoil you can get the
+    number of pentachora down to six); however, this will _not_ be
+    fast.
+
+Precondition:
+    The argument *knot* is a classical knot diagram. That is, the link
+    diagram is not virtual, and has exactly one link component.
+
+Exception ``FailedPrecondition``:
+    The given link diagram is empty, has multiple components, and/or
+    is virtual (as opposed to classical).
+
+Parameter ``knot``:
+    the knot to be spun.
+
+Parameter ``breakOpen``:
+    indicates where to break open the given knot diagram when
+    performing the spinning construction. See the StrandRef
+    documentation for the convention on how arcs are represented using
+    StrandRef objects. This may be a null reference (the default), in
+    which case this routine will choose an arbitrary location to break
+    the knot open.
+
+Returns:
+    an ideal triangulation of the resulting 2-knot.)doc";
 
 }
 
