@@ -135,7 +135,8 @@ Version 7.4  [ (to be announced) ]
               The old name has been kept as a deprecated alias.
         Class Example<4>:
             - New routine fourTorus(), thanks to Rhuaidi Burke.
-            - New routine boundarySpin().
+            - New routine boundarySpin(), which takes a 3-manifold.
+            - New routine spun(), which takes a 1-knot.
         Class ExampleLink:
             - New routine chen().
             - New routines virtualTrefoil(), kishino(), and gpv().
